# marginalia

./: .gitignore  CONTEXT.md  LICENSE  README.md  SPEC.md  codecov.yml
backend/: .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14d2433d318c_initial_schema.py  8f6b4adfd12f_prevent_duplicate_open_holds.py
backend/app/: main.py  tasks.py
backend/app/adapter/db/: mappers.py  migrations.py  models.py  queries.py  repositories.py  unit_of_work.py
backend/app/application/: dto.py  queries.py  unit_of_work.py
backend/app/application/use_cases/: catalog.py  circulation.py  patrons.py
backend/app/domain/: clock.py  errors.py  policy.py  repositories.py  services.py  value_objects.py
backend/app/domain/entities/: __init__.py  hold.py  item.py  loan.py  manifestation.py  patron.py  work.py
backend/app/infrastructure/: clock.py  config.py  policy_provider.py
backend/app/infrastructure/db/: engine.py  mappers.py  migrations.py  models.py  queries.py  repositories.py  unit_of_work.py
backend/app/interface/api/: deps.py  errors.py  params.py  schemas.py
backend/app/interface/api/routers/: items.py  (+3 more)
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_api.py  test_editing.py  test_hold_cancel.py  test_input_validation.py  test_item_state.py  test_read_endpoints.py
backend/tests/integration/: test_circulation.py  test_hold_cancel.py  test_holds.py  test_migrations.py  test_patron_lifecycle.py  test_tasks.py  test_use_case_errors.py
backend/tests/unit/: test_availability.py  test_domain_is_framework_free.py  test_hold.py  test_item.py  test_loan.py  test_patron.py  test_policy.py
(+54 files in other folders)
