[project]
name = "marginalia"
version = "0.1.0"
description = "v1 backend: catalog + patrons + circulation (Clean Architecture)"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
# Lines that are structural, not behaviour: abstract Protocol/ABC bodies and
# type-only imports carry nothing to exercise.
exclude_also = [
    "\\.\\.\\.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "W", "I", "UP", "B"]
# UP042: the domain enums intentionally subclass (str, Enum) so their values
# serialise as plain strings without committing to StrEnum's str() semantics.
ignore = ["UP042"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts Depends()/Query() in argument
# defaults by design; it is not the B008 mutable-default footgun.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
